2003-07-29  mput <root@mput.dip.jp>

	* timidity/timidity.c (help): rewrite to fit with long optoins.
	(set_tim_opt_short): Rename from set_tim_opt().
	(set_tim_opt_long): Add.
	(version): Add.
	* utils/getopt.[ch]: Add.
	* utils/support.[ch]: Delete getopt()

2003-07-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Support for modal interchange playing in pure intonation
	  Fix around user-defined temperament type

2003-07-22  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/effect.c, timidity/timidity.c:
	  Hack up noise shaping filter for 8-bit linear encoding
	  Update command help

2003-07-22  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c:
	  - Fixed the broken fallback-deveice selection.
	  - Changed the verbosity of gaussian table initialization
	    messages.

2003-07-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/darwin_a.c, timidity/effect.c, timidity/playmidi.c,
	  timidity/sndfont.c, timidity/timidity.[ch], timidity/w32_a.c,
	  timidity/w32g_a.c:
	  Change default settings for command line interface
	  - Change default output rate to 44100Hz
	  - Disable surround chorus in default
	  - Enable noise shaping filter in default
	  Enable SoundFont scale tuning
	  Beautify timidity/effect.c a little

2003-07-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c: Fix around SoundFont scale tuning

2003-07-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Hack up SoundFont scale tuning
	  Fix around single-note tuning change

2003-07-16  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch]: Support for RPN tuning program select

2003-07-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c,
	  interface/rtsyn_common.c, interface/rtsyn_winmm.c,
	  timidity/playmidi.[ch], timidity/rcp.c, timidity/readmidi.c:
	  Support for bulk tuning dump

2003-07-10  TAMUKI Shoichi <tamuki@linet.gr.jp>
